fixed search container alignment

--- a/sass/_other.scss
+++ b/sass/_other.scss
@@ -118,7 +118,6 @@
 
   .container {
     background: white;
-    margin-top: $baseline-height;
   }
   .search-end {
     padding: $baseline-height 8% $baseline-height * 1.5;
