--- a/style.css
+++ b/style.css
@@ -1633,7 +1633,6 @@ li.pingback {
 
 .search .container {
   background: white;
-  margin-top: 1.5em;
 }
 .search .search-end {
   padding: 1.5em 8% 2.25em;
